--- a/src/connectx/README
+++ b/src/connectx/README
@@ -30,3 +30,7 @@ CXPlayerTester application:
 - Verbose output and customized timeout (1 sec) and number of game repetitions (10 rounds)
 
 	java -cp ".." connectx.CXPlayerTester 6 7 4 connectx.L0.L0 connectx.L1.L1 -v -t 1 -r 10
+
+- Compile and run on windows
+	Compile with double click on compile.bat on src folder
+	java -cp ".." connectx.CXGame 6 7 4 connectx.MyPlayer.MyPlayer
